# OpenCL-Benchmark

./: CMakeLists.txt
src_kokkos/: kernels.cpp  kernels.hpp  main.cpp
